# uproot-custom-example

./: README.md  pyproject.toml
.github/workflows/: nightly-test.yml  test-package.yml  weekly-test.yml
_tmp/: test.ipynb  test.py
cpp/: CMakeLists.txt  my_reader.cc
gen-demo-data/: CMakeLists.txt  README.md
gen-demo-data/include/: LinkDef.h  TObjInObjArray.hh  TOverrideStreamer.hh
gen-demo-data/src/: TOverrideStreamer.cc  main.cc
my_read_project/: OverrideStreamer.py  TObjArray.py  __init__.py  cpp.pyi
my_reader/: OverrideStreamerFactory.py  TObjArrayFactory.py  __init__.py
tests/: demo-data.root  test-data.root  test_project.py
